--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {url "http://repo.spring.io/libs-milestone/"}
         jcenter()
         mavenCentral()
+        maven {url "http://central.maven.org/maven2/"}
     }
 }
 
