--- a/application/build.gradle
+++ b/application/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compile "org.jetbrains:annotations:15.0"
 
 //    JDBC
-    compile "mysql:mysql-connector-java:+"
+    compile "mysql:mysql-connector-java:6.0.5"
 
     compile "org.apache.httpcomponents:httpclient:4.5.3"
 
@@ -34,7 +34,9 @@ dependencies {
 
 //    Spring
     testCompile "org.springframework.boot:spring-boot-starter-test:1.5.1.RELEASE"
-//    testCompile "org.springframework:spring-test:+"
+
+//    H2
+    testCompile "com.h2database:h2:1.4.193"
 
 //    ===================
 //    ======SWAGGER======
