--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.database = MYSQL
 
 # Connection url for the database
-spring.datasource.url = jdbc:mysql://localhost:3306/dods?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/dods?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=Europe/Berlin
 spring.datasource.driver-class-attributName = com.mysql.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password =
