--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,15 @@ buildscript {
 }
 
 allprojects {
+
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
+
+    tasks.withType(Test) {
+        systemProperty "file.encoding", "UTF-8"
+    }
+
     repositories {
         maven {url "http://repo.spring.io/libs-milestone/"}
         jcenter()
