--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -10,11 +10,13 @@ spring.jpa.show-sql = false
 # ===============================
 
 # Set here configurations for the database connection
-spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform = io.dods.configs.CustomMysqlDialect
 spring.jpa.database = MYSQL
 
 # Connection url for the database
-spring.datasource.url = jdbc:mysql://localhost:3306/dods?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://localhost:3306/dods?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=Europe/Berlin&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.sqlScriptEncoding=UTF-8
 spring.datasource.driver-class-attributName = com.mysql.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password =
